--- a/tox.ini
+++ b/tox.ini
@@ -7,4 +7,7 @@ max-line-length=120
 exclude=ModernGL/ext,build,dist
 
 [isort]
+line_length=120
 known_third_party=ModernGL
+known_first_party=setuptools
+multi_line_output=5
