--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ addons:
 
 install:
   - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
+  - python -m pip install -U setuptools
   - python -m pip install -r tests/requirements.txt
   - python setup.py build_ext --inplace
   - python -m pip install -e .
